เพิ่ม entity controller ui sprint2
