# backend/docs/swagger.yaml
@@ -62,12 +62,18 @@ definitions:
     type: object
   controllers.Prescription:
     properties:
+      annotation:
+        type: string
       doctorID:
         type: integer
       medicineID:
         type: integer
       patientInfoID:
         type: integer
+      statusID:
+        type: integer
+      symptom:
+        type: string
       value:
         type: string
     type: object
@@ -494,6 +500,12 @@ definitions:
     type: object
   ent.Prescription:
     properties:
+      Annotation:
+        description: Annotation holds the value of the "Annotation" field.
+        type: string
+      Symptom:
+        description: Symptom holds the value of the "Symptom" field.
+        type: string
       Value:
         description: Value holds the value of the "Value" field.
         type: integer
@@ -528,6 +540,34 @@ definitions:
         description: Prescriptionpatient holds the value of the prescriptionpatient
           edge.
         type: object
+      prescriptonstatus:
+        $ref: '#/definitions/ent.Status'
+        description: Prescriptonstatus holds the value of the prescriptonstatus edge.
+        type: object
+    type: object
+  ent.Status:
+    properties:
+      edges:
+        $ref: '#/definitions/ent.StatusEdges'
+        description: |-
+          Edges holds the relations/edges for other nodes in the graph.
+          The values are being populated by the StatusQuery when eager-loading is set.
+        type: object
+      id:
+        description: ID of the ent.
+        type: integer
+      status:
+        description: Status holds the value of the "status" field.
+        type: string
+    type: object
+  ent.StatusEdges:
+    properties:
+      statusprescription:
+        description: Statusprescription holds the value of the statusprescription
+          edge.
+        items:
+          $ref: '#/definitions/ent.Prescription'
+        type: array
     type: object
   ent.UnitOfMedicine:
     properties:
@@ -1141,6 +1181,39 @@ paths:
           schema:
             $ref: '#/definitions/gin.H'
       summary: Get a Prescription entity by ID
+    put:
+      consumes:
+      - application/json
+      description: update Prescription by ID
+      operationId: update-Prescription
+      parameters:
+      - description: Prescription ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Prescription entity
+        in: body
+        name: Prescription
+        required: true
+        schema:
+          $ref: '#/definitions/ent.Prescription'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ent.Prescription'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Update a Prescription entity by ID
   /UnitOfMedicine:
     get:
       description: list UnitOfMedicine entities
@@ -2558,6 +2631,124 @@ paths:
           schema:
             $ref: '#/definitions/gin.H'
       summary: Update a pharmacist entity by ID
+  /statuss:
+    get:
+      description: list status entities
+      operationId: list-status
+      parameters:
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      - description: Offset
+        in: query
+        name: offset
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/ent.Status'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: List status entities
+    post:
+      consumes:
+      - application/json
+      description: Create status
+      operationId: create-status
+      parameters:
+      - description: Status entity
+        in: body
+        name: status
+        required: true
+        schema:
+          $ref: '#/definitions/ent.Status'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ent.Status'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Create status
+  /statuss/{id}:
+    delete:
+      description: get status by ID
+      operationId: delete-status
+      parameters:
+      - description: Status ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/gin.H'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Delete a status entity by ID
+    get:
+      description: get status by ID
+      operationId: get-status
+      parameters:
+      - description: Status ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ent.Status'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Get a status entity by ID
 securityDefinitions:
   ApiKeyAuth:
     in: header
