# backend/ent/migrate/schema.go
@@ -308,9 +308,12 @@ var (
 	PrescriptionsColumns = []*schema.Column{
 		{Name: "id", Type: field.TypeInt, Increment: true},
 		{Name: "value", Type: field.TypeInt},
+		{Name: "symptom", Type: field.TypeString},
+		{Name: "annotation", Type: field.TypeString},
 		{Name: "doctor_id", Type: field.TypeInt, Nullable: true},
 		{Name: "medicine_id", Type: field.TypeInt, Nullable: true},
 		{Name: "patient_id", Type: field.TypeInt, Nullable: true},
+		{Name: "status_id", Type: field.TypeInt, Nullable: true},
 	}
 	// PrescriptionsTable holds the schema information for the "prescriptions" table.
 	PrescriptionsTable = &schema.Table{
@@ -320,26 +323,45 @@ var (
 		ForeignKeys: []*schema.ForeignKey{
 			{
 				Symbol:  "prescriptions_doctors_doctorprescription",
-				Columns: []*schema.Column{PrescriptionsColumns[2]},
+				Columns: []*schema.Column{PrescriptionsColumns[4]},
 
 				RefColumns: []*schema.Column{DoctorsColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
 			{
 				Symbol:  "prescriptions_medicines_medicinepresciption",
-				Columns: []*schema.Column{PrescriptionsColumns[3]},
+				Columns: []*schema.Column{PrescriptionsColumns[5]},
 
 				RefColumns: []*schema.Column{MedicinesColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
 			{
 				Symbol:  "prescriptions_patient_infos_patientprescription",
-				Columns: []*schema.Column{PrescriptionsColumns[4]},
+				Columns: []*schema.Column{PrescriptionsColumns[6]},
 
 				RefColumns: []*schema.Column{PatientInfosColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
+			{
+				Symbol:  "prescriptions_status_statusprescription",
+				Columns: []*schema.Column{PrescriptionsColumns[7]},
+
+				RefColumns: []*schema.Column{StatusColumns[0]},
+				OnDelete:   schema.SetNull,
+			},
 		},
+	}
+	// StatusColumns holds the columns for the "status" table.
+	StatusColumns = []*schema.Column{
+		{Name: "id", Type: field.TypeInt, Increment: true},
+		{Name: "status", Type: field.TypeString, Unique: true},
+	}
+	// StatusTable holds the schema information for the "status" table.
+	StatusTable = &schema.Table{
+		Name:        "status",
+		Columns:     StatusColumns,
+		PrimaryKey:  []*schema.Column{StatusColumns[0]},
+		ForeignKeys: []*schema.ForeignKey{},
 	}
 	// UnitOfMedicinesColumns holds the columns for the "unit_of_medicines" table.
 	UnitOfMedicinesColumns = []*schema.Column{
@@ -369,6 +391,7 @@ var (
 		PaymentsTable,
 		PharmacistsTable,
 		PrescriptionsTable,
+		StatusTable,
 		UnitOfMedicinesTable,
 	}
 )
@@ -392,4 +415,5 @@ func init() {
 	PrescriptionsTable.ForeignKeys[0].RefTable = DoctorsTable
 	PrescriptionsTable.ForeignKeys[1].RefTable = MedicinesTable
 	PrescriptionsTable.ForeignKeys[2].RefTable = PatientInfosTable
+	PrescriptionsTable.ForeignKeys[3].RefTable = StatusTable
 }
